# rustversion

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: attr.rs  bound.rs  constfn.rs  date.rs  error.rs  expand.rs  expr.rs  iter.rs  lib.rs  release.rs  rustc.rs  time.rs  version.rs
tests/: compiletest.rs  test_const.rs  test_eval.rs  test_parse.rs
tests/nightly/: const_impls.rs
tests/ui/: bad-bound.rs  bad-bound.stderr  bad-date.rs  bad-date.stderr  bad-not.stderr  bad-version.rs  bad-version.stderr  const-not-fn.stderr
